--- a/restapi/Overview.html
+++ b/restapi/Overview.html
@@ -132,7 +132,7 @@ then post are the counts for each bucket.</p>
       </ul>
     </div>
     <div class="footer">
-        &copy; Copyright 2014, Jeff Sabin.
+        &copy; Copyright 2014, KairosDB.org.
       Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.1.3.
     </div>
   </body>
