--- a/restapi/TimeGrouping.html
+++ b/restapi/TimeGrouping.html
@@ -191,7 +191,7 @@ creates 168 groups (number of hours in a week). The first group is the first hou
       </ul>
     </div>
     <div class="footer">
-        &copy; Copyright 2014, Jeff Sabin.
+        &copy; Copyright 2014, KairosDB.org.
       Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.1.3.
     </div>
   </body>
