--- a/PushingData.html
+++ b/PushingData.html
@@ -166,7 +166,7 @@ echo "put $metric $now $value host=A" | nc -w 30 $host 4242</pre>
       </ul>
     </div>
     <div class="footer">
-        &copy; Copyright 2014, Jeff Sabin.
+        &copy; Copyright 2014, KairosDB.org.
       Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.1.3.
     </div>
   </body>
