--- a/kairosdevelopment/IntelliJSetup.html
+++ b/kairosdevelopment/IntelliJSetup.html
@@ -198,7 +198,7 @@ Go to Modules and select the main module.</p>
       </ul>
     </div>
     <div class="footer">
-        &copy; Copyright 2014, Jeff Sabin.
+        &copy; Copyright 2014, KairosDB.org.
       Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.1.3.
     </div>
   </body>
