--- a/restapi/AddDataPoints.html
+++ b/restapi/AddDataPoints.html
@@ -192,7 +192,7 @@ tagged with the value of &#8220;server1&#8221;.</p>
       </ul>
     </div>
     <div class="footer">
-        &copy; Copyright 2014, Jeff Sabin.
+        &copy; Copyright 2014, KairosDB.org.
       Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.1.3.
     </div>
   </body>
