--- a/restapi/QueryMetrics.html
+++ b/restapi/QueryMetrics.html
@@ -314,7 +314,7 @@ get one value which is the average for the week. Sampling is specified with a &#
       </ul>
     </div>
     <div class="footer">
-        &copy; Copyright 2014, Jeff Sabin.
+        &copy; Copyright 2014, KairosDB.org.
       Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.1.3.
     </div>
   </body>
