--- a/restapi/TagGrouping.html
+++ b/restapi/TagGrouping.html
@@ -174,7 +174,7 @@
       </ul>
     </div>
     <div class="footer">
-        &copy; Copyright 2014, Jeff Sabin.
+        &copy; Copyright 2014, KairosDB.org.
       Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.1.3.
     </div>
   </body>
