--- a/restapi/ValueGrouping.html
+++ b/restapi/ValueGrouping.html
@@ -168,7 +168,7 @@ the first group (group number 0) contains data points whose values are between 0
       </ul>
     </div>
     <div class="footer">
-        &copy; Copyright 2014, Jeff Sabin.
+        &copy; Copyright 2014, KairosDB.org.
       Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.1.3.
     </div>
   </body>
