Add missing comma, get valid JSON

--- a/kairosdocs/restapi/QueryMetrics.html
+++ b/kairosdocs/restapi/QueryMetrics.html
@@ -152,7 +152,7 @@ optional.  If no end time is specified, the end time is assumed to be now (the c
                "customer": ["bar"]
            },
            "name": "abc.123",
-           "limit": 10000
+           "limit": 10000,
            "aggregators": [
                {
                    "name": "sum",
