Added temporary "website/index.html" for wrong redirections from kairosdb.org. Fixed Google Groups link.

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 					<li class="active"><a href="#">Overview</a></li>
 					<li><a href="docs/build/html/index.html">Documentation</a></li>
 					<li><a
-						href="https://groups.google.com/forum/?hl=fr#!forum/kairosdb-group"
+						href="https://groups.google.com/forum/#!forum/kairosdb-group"
 						target="_blank">Community</a></li>
 					<li><a href="https://github.com/kairosdb/kairosdb">Github</a></li>
 					<form class="navbar-form navbar-right"
